# bboxer-app

./: .gitignore  README.md  pyproject.toml
bboxer-app/: __main__.py  config.py  schemas.py  utils.py
