[tool.poetry]
name = "bboxer-app"
version = "0.1.0"
description = ""
authors = ["Kacper Kedzierski <kacper.kedzierski1986@gmail.com>"]
readme = "README.md"
packages = [{include = "bboxer_app"}]

[tool.poetry.dependencies]
python = "^3.7"
msal = "^1.20.0"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
