[tool.poetry]
name = "bboxer-app"
version = "0.1.0"
description = ""
authors = ["Kacper Kedzierski <kacper.kedzierski1986@gmail.com>"]
readme = "README.md"
packages = [{include = "bboxer_app"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
msal = "^1.20.0"
pydantic = "^1.10.2"
requests = "^2.28.1"
Pillow = "^9.3.0"
numpy = "^1.23.4"
opencv-python = "^4.6.0.66"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
